# tinylog

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
examples/: CMakeLists.txt  console_logging.cpp  dynamic_log_level.cpp  file_logging.cpp  formatted_logging.cpp  multithreaded_logging.cpp
include/tinylog/: color.hpp  common.hpp  sync_logger.hpp
src/: common.hpp
